@@ -1,3 +1,8 @@
+2007-06-16 Jens Tkotz <jens@peino.de> 1.5.7-svn-b7
+
+ * Fix: Use of a inputfield instead of a textarea in imagemap
+        when embedded in phpNuke. reason is a conflict with tinymce.
+
 2007-06-16 Jens Tkotz <jens@peino.de> 1.5.7-svn-b6
 
  * Change: More changes according to wz_tooltips v4
